<resources>
    <string name="app_name">Trip Calculator</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Enter">Get Started</string>
    <string name="Trip_Optimizer">Trip Calculator</string>
    <string name="Menu">Menu</string>
    <string name="Manual">Manual Drive</string>
    <string name="Automatic">Automatic Drive</string>
    <string name="Statistics">Statistics</string>
    <string name="SwitchAuto">Switch to Automatic Mode</string>
    <string name="toManual">Switch to Manual Mode</string>



</resources>
