<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F7292E37"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/on2"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="348dp"
        android:src="@drawable/on"
        />



    <Button
        android:id="@+id/onoff2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginLeft="360dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/nottransparent" />



    <ImageButton
        android:id="@+id/back1"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_gravity="left"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/back"
        android:fontFamily="sans-serif-black"
        android:text="@string/Manual"
        android:textAllCaps="false"
        android:textColor="#BB070707"
        android:textSize="25sp" />

    <EditText
        android:layout_width="257dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="60dp"
        android:text="@string/Menu"
        android:gravity="center"
        android:textSize="37dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#E5BC9D2E"
        android:focusableInTouchMode="false"
        />


    <Button
        android:id="@+id/manualb"
        android:layout_width="378dp"
        android:layout_height="81dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="18dp"
        android:layout_gravity="center"

        android:background="@drawable/colorchange"
        android:fontFamily="sans-serif-black"
        android:text="@string/Manual"
        android:textAllCaps="false"
        android:textColor="#BB070707"
        android:textSize="25dp" />

    <Button
        android:id="@+id/automatic"
        android:layout_width="378dp"
        android:layout_height="81dp"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="18dp"
        android:layout_gravity="center"
        android:background="@drawable/colorchange"
        android:fontFamily="sans-serif-black"
        android:text="@string/Automatic"
        android:textAllCaps="false"
        android:textColor="#BB070707"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/statistics"
        android:layout_width="378dp"
        android:layout_height="81dp"
android:layout_marginTop="500dp"
        android:layout_marginLeft="18dp"
        android:gravity="center"
        android:layout_gravity="center"

        android:background="@drawable/colorchange"
        android:fontFamily="sans-serif-black"
        android:text="@string/Statistics"
        android:textAllCaps="false"
        android:textColor="#BB070707"
        android:textSize="25dp"
        />



</RelativeLayout>