<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F7292E37"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/on"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="348dp"
        android:src="@drawable/on"
        />

    <Button
        android:id="@+id/onoff"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginLeft="360dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/nottransparent" />

    <ImageView
        android:src="@drawable/logonew2"
        android:layout_width="159dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="130dp"

        />

    <EditText
        android:layout_width="257dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="80dp"
        android:text="@string/Trip_Optimizer"
        android:gravity="center"
        android:textSize="37dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#E5BC9D2E"
        android:focusableInTouchMode="false"
        />

    <Button
        android:id="@+id/Connect"
        android:layout_width="260dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/colorchange"
        android:fontFamily="sans-serif-black"
        android:text="@string/Connect"
        android:textAllCaps="false"
        android:textColor="#BB070707"
        android:textSize="25dp"


        />

    <Button
        android:id="@+id/Disconnect"
        android:layout_width="260dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/colorchange"
        android:fontFamily="sans-serif-black"
        android:text="@string/Disconnect"
        android:textAllCaps="false"
        android:textColor="#BB070707"
        android:textSize="25dp"


        />


    <Button
        android:id="@+id/getstarted"
        android:layout_width="260dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:background="@drawable/colorchange"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="70dp"
        android:text="@string/Enter"
        android:textAllCaps="false"
        android:textColor="#BB070707"
        android:textSize="25dp"


        />
		
		
	<ImageButton
        android:id="@+id/setting"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="342dp"
        android:layout_marginTop="590dp"
        android:background="@drawable/colorchange"
        app:srcCompat="@android:drawable/ic_menu_manage"/>


</RelativeLayout>